--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="blocks/index/index.css" />
-    <title>Supermarket App</title>
+    <link rel="stylesheet" href="pages/index.css" />
+    <title>Around The U.S.</title>
   </head>
   <body>
+    <header class="header">
+      <img src="images/logo.svg" alt="" class="header__logo">
+    </header>
     <script src="scripts/script.js"></script>
   </body>
   </html>
