style: add background color, fonts, margins

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pages/index.css" />
     <title>Around The U.S.</title>
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <img src="images/logo.svg" alt="" class="header__logo">
     </header>
