--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header class="header">
       <img src="images/logo.svg" alt="" class="header__logo">
     </header>
+    <main class="content">
+      
+    </main>
     <script src="scripts/script.js"></script>
   </body>
   </html>
