feat: code markup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       <img src="images/logo.svg" alt="" class="header__logo">
     </header>
     <main class="content">
-      
+      <section class="profile">
+        <img src="images/Cousteau.png" alt="profile image" class="profile__image">
+        <div class="profile__info">
+          <h1 class="profile__name">Jacques Cousteau</h1>
+          <p class="profile__subtitle">Explorer</p>
+          <button class="profile__edit-btn" type="button"></button>
+        </div>
+        <button class="profile__add-btn" type="button"></button>
+      </section>
     </main>
     <script src="scripts/script.js"></script>
   </body>
