--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="profile__info">
           <h1 class="profile__name">Jacques Cousteau</h1>
           <p class="profile__subtitle">Explorer</p>
-          <button class="profile__edit-btn" type="button"></button>
+          <button class="profile__btn profile__btn_type_edit" type="button">
+          </button>
         </div>
-        <button class="profile__add-btn" type="button"></button>
+        <button class="profile__btn profile__btn_type_add" type="button"></button>
       </section>
     </main>
     <script src="scripts/script.js"></script>
