--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         </li>
       </ul>
     </main>
+    <footer class="footer">
+      <p class="footer__copyright">&#169 2020 Around The U.S.</p>
+    </footer>
     <script src="scripts/script.js"></script>
   </body>
   </html>
