style: remove border aroung img

--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
       <ul class="gallery">
         <li class="gallery__item">
           <div class="card">
-            <img src="images/yosemite.png" alt="Yosemite valley" class="carg__img">
+            <img src="images/yosemite.png" alt="Yosemite valley" class="card__img">
             <h2 class="card__title">Yosemite Valley</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/louise.png" alt="lake" class="carg__img">
+            <img src="images/louise.png" alt="lake" class="card__img">
             <h2 class="card__title">Lake Louise</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/bald_mountains.png" alt="mountains" class="carg__img">
+            <img src="images/bald_mountains.png" alt="mountains" class="card__img">
             <h2 class="card__title">Bald Mountains</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/latemar.png" alt="mountains sunrise" class="carg__img">
+            <img src="images/latemar.png" alt="mountains sunrise" class="card__img">
             <h2 class="card__title">Latemar</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/vanoise.png" alt="mountain lake" class="carg__img">
+            <img src="images/vanoise.png" alt="mountain lake" class="card__img">
             <h2 class="card__title">Vanois National...</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/lago_di_braies.png" alt="boats on lake" class="carg__img">
+            <img src="images/lago_di_braies.png" alt="boats on lake" class="card__img">
             <h2 class="card__title">Lago di Braies</h2>
             <button class="card__btn"></button>
           </div>
