feat: add popup and form markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Around The U.S.</title>
   </head>
   <body class="page">
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__btn-close"></button>
+        <form class="form" action="submit">
+          <h2 class="from__title">Edit profile</h2>
+          <input type="text" class="form__input-name" value="Jacques Cousteau">
+          <input type="text" class="form__input-subtitle" value="Explorer">
+          <button class="form__submit-btn type__submit">Save</button>
+        </form>
+      </div>
+    </div>
     <header class="header">
       <img src="images/logo.svg" alt="" class="header__logo">
     </header>
