--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <button class="popup__btn-close"></button>
         <form class="form" action="submit">
           <h2 class="from__title">Edit profile</h2>
-          <input type="text" class="form__input-name" value="Jacques Cousteau">
-          <input type="text" class="form__input-subtitle" value="Explorer">
+          <input type="text" class="form__input" value="Jacques Cousteau">
+          <input type="text" class="form__input" value="Explorer">
           <button class="form__submit-btn type__submit">Save</button>
         </form>
       </div>
