style: add styles to form title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="popup__container">
         <button class="popup__btn-close"></button>
         <form class="form" action="submit">
-          <h2 class="from__title">Edit profile</h2>
+          <h2 class="form__title">Edit profile</h2>
           <input type="text" class="form__input" value="Jacques Cousteau">
           <input type="text" class="form__input" value="Explorer">
           <button class="form__submit-btn type__submit">Save</button>
