style: add styles to save button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body class="page">
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__btn-close"></button>
+        <button class="popup__btn-close" type="button"></button>
         <form class="form" action="submit">
           <h2 class="form__title">Edit profile</h2>
           <input type="text" class="form__input" value="Jacques Cousteau">
           <input type="text" class="form__input" value="Explorer">
-          <button class="form__submit-btn type__submit">Save</button>
+          <button class="form__submit-btn" type="submit">Save</button>
         </form>
       </div>
     </div>
