--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <header class="header">
-      <img src="images/logo.svg" alt="" class="header__logo">
+      <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
