refactor block and add media block

--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="images/Cousteau.png" alt="profile image" class="profile__image">
-        <div class="profile__info">
-          <h1 class="profile__name">Jacques Cousteau</h1>
-          <button class="profile__btn profile__btn_type_edit" type="button">
-          </button>
-          <p class="profile__subtitle">Explorer</p>
+        <div class="media">
+          <img src="images/Cousteau.png" alt="profile image" class="media__image">
+        <div class="media__body">
+          <div class="media__info">
+            <h1 class="media__name">Jacques Cousteau</h1>
+            <button class="media__btn" type="button">
+            </button>
+          </div>
+          <p class="media__subtitle">Explorer</p>
         </div>
-        <button class="profile__btn profile__btn_type_add" type="button"></button>
+        </div>
+        <button class="profile__btn profile__btn" type="button"></button>
       </section>
       <ul class="gallery">
         <li class="gallery__item">
