refactor: changed layout in grid

--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     </header>
     <main class="content">
       <section class="profile">
-        <div class="media">
-          <img src="images/Cousteau.png" alt="profile image" class="media__image">
-        <div class="media__body">
-          <div class="media__info">
+        <img src="images/Cousteau.png" alt="profile image" class="media__image">
+        <ul class="media">
+          <li class="media__item">
             <h1 class="media__name">Jacques Cousteau</h1>
             <button class="media__btn" type="button">
             </button>
-          </div>
-          <p class="media__subtitle">Explorer</p>
-        </div>
-        </div>
+          </li>
+          <li class="media__item"><p class="media__subtitle">Explorer</p></li>
+        </ul>
         <button class="profile__btn profile__btn" type="button"></button>
       </section>
       <ul class="gallery">
