refactor: change two col grid

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="images/Cousteau.png" alt="profile image" class="media__image">
-        <ul class="media">
-          <li class="media__item">
-            <h1 class="media__name">Jacques Cousteau</h1>
-            <button class="media__btn" type="button">
-            </button>
-          </li>
-          <li class="media__item"><p class="media__subtitle">Explorer</p></li>
-        </ul>
+        <div class="media">
+          <img src="images/Cousteau.png" alt="profile image" class="media__image">
+          <ul class="media__body">
+            <li class="media__item">
+              <h1 class="media__name">Jacques Cousteau</h1>
+              <button class="media__btn" type="button"></button>
+            </li>
+            <li class="media__item"><p class="media__subtitle">Explorer</p></li>
+          </ul>
+        </div>
         <button class="profile__btn profile__btn" type="button"></button>
       </section>
       <ul class="gallery">
