feat: responsive grid

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <button class="profile__btn profile__btn" type="button"></button>
       </section>
-      <ul class="gallery">
+      <ul class="gallery page__section">
         <li class="gallery__item">
           <div class="card">
             <img src="images/yosemite.png" alt="Yosemite valley" class="card__img">
