feat: add padding on small resolutions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
     <main class="content">
-      <section class="profile">
+      <section class="profile page__section">
         <div class="media">
           <img src="images/Cousteau.png" alt="profile image" class="media__image">
           <ul class="media__body">
