style: set default font size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <h1 class="media__name">Jacques Cousteau</h1>
               <button class="media__btn" type="button"></button>
             </li>
-            <li class="media__item"><p class="media__subtitle">Explorer</p></li>
+            <li class="media__item">Explorer</li>
           </ul>
         </div>
         <button class="profile__btn profile__btn" type="button"></button>
