--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </li>
       </ul>
     </main>
-    <footer class="footer">
+    <footer class="footer page__section">
       <p class="footer__copyright">&#169 2020 Around The U.S.</p>
     </footer>
     <script src="scripts/script.js"></script>
