feat: make responsive

--- a/index.html
+++ b/index.html
@@ -7,17 +7,6 @@
     <title>Around The U.S.</title>
   </head>
   <body class="page">
-    <div class="popup">
-      <div class="popup__container">
-        <button class="popup__btn-close" type="button"></button>
-        <form class="form" action="submit">
-          <h2 class="form__title">Edit profile</h2>
-          <input type="text" class="form__input" value="Jacques Cousteau">
-          <input type="text" class="form__input" value="Explorer">
-          <button class="form__submit-btn" type="submit">Save</button>
-        </form>
-      </div>
-    </div>
     <header class="header">
       <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
@@ -83,6 +72,17 @@
     <footer class="footer page__section">
       <p class="footer__copyright">&#169 2020 Around The U.S.</p>
     </footer>
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__btn-close" type="button"></button>
+        <form class="form" action="#">
+          <h2 class="form__title">Edit profile</h2>
+          <input type="text" class="form__input" value="Jacques Cousteau">
+          <input type="text" class="form__input" value="Explorer">
+          <button class="form__submit-btn" type="submit">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="scripts/script.js"></script>
   </body>
   </html>
