feat: add hover on buttons

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <ul class="media__body">
             <li class="media__item">
               <h1 class="media__name">Jacques Cousteau</h1>
-              <button class="media__btn" type="button"></button>
+              <button class="media__btn button" type="button"></button>
             </li>
             <li class="media__item">Explorer</li>
           </ul>
         </div>
-        <button class="profile__btn profile__btn" type="button"></button>
+        <button class="profile__btn button" type="button"></button>
       </section>
       <ul class="gallery page__section">
         <li class="gallery__item">
@@ -74,7 +74,7 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__btn-close" type="button"></button>
+        <button class="popup__btn-close button" type="button"></button>
         <form class="form" action="#">
           <h2 class="form__title">Edit profile</h2>
           <input type="text" class="form__input" value="Jacques Cousteau">
