feat: add textarea

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <button class="popup__btn-close button" type="button"></button>
         <form class="form" action="#">
           <h2 class="form__title">Edit profile</h2>
-          <input type="text" class="form__input" value="Jacques Cousteau">
-          <input type="text" class="form__input" value="Explorer">
+          <input type="text" class="form__input" placeholder="Name">
+          <input type="text" class="form__input" placeholder="About me">
           <button class="form__submit-btn" type="submit">Save</button>
         </form>
       </div>
