refactor: remove span

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <h1 class="media__name js-user-name">Jacques Cousteau</h1>
               <button class="media__btn button js-edit-btn" type="button"></button>
             </li>
-            <li class="media__item"><span class="js-user-job">Explorer</span></li>
+            <li class="media__item js-user-job">Explorer</li>
           </ul>
         </div>
         <button class="profile__btn button" type="button"></button>
