fix: give formfields unique names

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
           <h2 class="form__title">Edit profile</h2>
           <input
             type="text"
-            class="form__input"
+            class="form__input js-input-name"
             name="name"
             placeholder="Name"
           >
           <input
             type="text"
-            class="form__input"
+            class="form__input js-input-job"
             name="job"
             placeholder="About me"
           >
