fix: change ul and li to div

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             alt="profile image"
             class="media__image"
           >
-          <ul class="media__body">
-            <li class="media__item">
+          <div class="media__body">
+            <div class="media__item">
               <h1 class="media__name js-user-name">Jacques Cousteau</h1>
               <button
                 class="media__btn button js-edit-btn"
                 type="button"
               ></button>
-            </li>
-            <li class="media__item js-user-job">Explorer</li>
-          </ul>
+            </div>
+            <p class="media__item js-user-job">Explorer</p>
+          </div>
         </div>
         <button class="profile__btn button" type="button"></button>
       </section>
