fix: add text-overflow and max-width

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 type="button"
               ></button>
             </div>
-            <p class="media__item js-user-job">Explorer</p>
+            <p class="media__job js-user-job">Explorer</p>
           </div>
         </div>
         <button class="profile__btn button" type="button"></button>
