fix: add text overflow and max-width

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               alt="mountain lake"
               class="card__img"
             >
-            <h2 class="card__title">Vanois National...</h2>
+            <h2 class="card__title">Vanois National Park</h2>
             <button class="card__btn"></button>
           </div>
         </li>
