refactor: change img to background image of div

--- a/index.html
+++ b/index.html
@@ -34,62 +34,57 @@
       <ul class="gallery page__section">
         <li class="gallery__item">
           <div class="card">
-            <img
-              src="images/yosemite.png"
-              alt="Yosemite valley"
-              class="card__img"
-            >
+            <div
+              style="background-image:url('images/yosemite.png')"
+              class="card__img">
+            </div>
             <h2 class="card__title">Yosemite Valley</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img src="images/louise.png" alt="lake" class="card__img">
+            <div style="background-image:url('images/louise.png')" class="card__img"></div>
             <h2 class="card__title">Lake Louise</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img
-              src="images/bald_mountains.png"
-              alt="mountains"
+            <div
+              style="background-image:url('images/bald_mountains.png')"
               class="card__img"
-            >
+            ></div>
             <h2 class="card__title">Bald Mountains</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img
-              src="images/latemar.png"
-              alt="mountains sunrise"
+            <div
+            style="background-image:url('images/latemar.png')"
               class="card__img"
-            >
+            ></div>
             <h2 class="card__title">Latemar</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img
-              src="images/vanoise.png"
-              alt="mountain lake"
+            <div
+            style="background-image:url('images/vanoise.png')"
               class="card__img"
-            >
+            ></div>
             <h2 class="card__title">Vanois National...</h2>
             <button class="card__btn"></button>
           </div>
         </li>
         <li class="gallery__item">
           <div class="card">
-            <img
-              src="images/lago_di_braies.png"
-              alt="boats on lake"
+            <div
+            style="background-image:url('images/lago_di_braies.png')"
               class="card__img"
-            >
+            ></div>
             <h2 class="card__title">Lago di Braies</h2>
             <button class="card__btn"></button>
           </div>
