--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div
             style="background-image:url('images/vanoise.png')"
               class="card__img"
-            >
+            ></div>
             <h2 class="card__title">Vanois National Park</h2>
             <button class="card__btn"></button>
           </div>
@@ -123,7 +123,7 @@
       <div class="card">
         <div class="card__img js-card-img"></div>
         <h2 class="card__title js-card-title"></h2>
-        <button class="card__btn"></button>
+        <button class="card__btn js-card-btn"></button>
       </div>
       </li>
     </template>
