feat: add functionality to open and close a form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pages/index.css">
     <title>Around The U.S.</title>
   </head>
-  <body class="page">
+  <body class="page js-page">
     <header class="header">
       <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
@@ -37,7 +37,7 @@
     <footer class="footer page__section">
       <p class="footer__copyright">&#169; 2020 Around The U.S.</p>
     </footer>
-    <div class="popup js-popup">
+    <div class="popup js-popup-profile">
       <div class="popup__container">
         <button
           class="popup__btn-close button js-close-btn"
@@ -61,10 +61,10 @@
         </form>
       </div>
     </div>
-      <div class="popup js-add-photo">
+      <div class="popup js-popup-photo">
         <div class="popup__container">
           <button
-            class="popup__btn-close button js-close-photo"
+            class="popup__btn-close button js-close-btn"
             type="button"
           ></button>
           <form class="form js-form" action="#">
