feat: add new card to array

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           class="popup__btn-close button js-close-btn"
           type="button"
         ></button>
-        <form class="form js-form" action="#">
+        <form class="form js-profile-form" action="#">
           <h2 class="form__title">Edit profile</h2>
           <input
             type="text"
@@ -67,17 +67,17 @@
             class="popup__btn-close button js-close-btn"
             type="button"
           ></button>
-          <form class="form js-form" action="#">
+          <form class="form js-card-form" action="#">
             <h2 class="form__title">New Place</h2>
             <input
               type="text"
-              class="form__input js-input-name"
+              class="form__input js-input-title"
               name="title"
               placeholder="Title"
             >
             <input
               type="text"
-              class="form__input js-input-job"
+              class="form__input js-input-link"
               name="link"
               placeholder="Image link"
             >
