--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
     <template class="js-card-template">
-      <li class="gallery__item">
+      <li class="js-gallery-item">
       <div class="card">
         <div class="card__img js-card-img"></div>
         <h2 class="card__title js-card-title"></h2>
