feat: like button change color

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="card">
         <div class="card__img js-card-img"></div>
         <h2 class="card__title js-card-title"></h2>
-        <button class="card__btn js-card-btn"></button>
+        <button class="card__like js-like-btn"></button>
       </div>
       </li>
     </template>
