feat: add button that removes cards from gallery

--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
     <template class="js-card-template">
       <li class="js-gallery-item">
       <div class="card">
-        <div class="card__img js-card-img"></div>
+        <button class="button card__del js-del-btn"></button>
+        <div class="card__img js-card-img">
+        </div>
         <h2 class="card__title js-card-title"></h2>
-        <button class="card__like js-like-btn"></button>
+        <button class="card__like js-like-btn button"></button>
       </div>
       </li>
     </template>
