refactor: add listeners for close buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           class="popup__btn-close button js-close-btn"
           type="button"
         ></button>
-        <form class="form js-profile-form" action="#">
+        <form class="form js-form" action="#">
           <h2 class="form__title">Edit profile</h2>
           <input
             type="text"
@@ -67,7 +67,7 @@
             class="popup__btn-close button js-close-btn"
             type="button"
           ></button>
-          <form class="form js-card-form" action="#">
+          <form class="form js-form" action="#">
             <h2 class="form__title">New Place</h2>
             <input
               type="text"
