--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </form>
       </div>
     </div>
-      <div class="popup js-popup-photo">
+      <div class="popup js-popup-photo-form">
         <div class="popup__container">
           <button
             class="popup__btn-close button js-close-btn"
@@ -85,6 +85,17 @@
           </form>
         </div>
       </div>
+    <template class="js-popup-template">
+        <div class="popup__container">
+            <button
+                class="popup__btn-close button js-close-btn"
+                type="button"
+              ></button>
+              <div class="popup__picture js-popup-picture"></div>
+              <h2 class="popup__title js-popup-title"></h2>
+        </div>
+      </div>
+    </template>
     <template class="js-card-template">
       <li class="js-gallery-item card">
         <button class="button card__del js-del-btn"></button>
