--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer class="footer page__section">
       <p class="footer__copyright">&#169; 2020 Around The U.S.</p>
     </footer>
-    <div class="popup js-popup-profile">
+    <div class="popup popup_background_light js-popup-profile">
       <div class="popup__container">
         <button
           class="popup__btn-close button js-close-btn"
@@ -61,7 +61,7 @@
         </form>
       </div>
     </div>
-      <div class="popup js-popup-photo-form">
+      <div class="popup popup_background_light js-popup-photo-form">
         <div class="popup__container">
           <button
             class="popup__btn-close button js-close-btn"
@@ -85,17 +85,16 @@
           </form>
         </div>
       </div>
-    <template class="js-popup-template">
-        <div class="popup__container">
-            <button
-                class="popup__btn-close button js-close-btn"
-                type="button"
-              ></button>
-              <div class="popup__picture js-popup-picture"></div>
-              <h2 class="popup__title js-popup-title"></h2>
-        </div>
+      <div class="popup popup_background_dark js-popup-picture">
+        <div class="popup__container popup__container_picture">
+          <button
+            class="popup__btn-close popup__btn-close_position button js-close-btn"
+            type="button"
+          ></button>
+          <img class="popup__image js-popup-image">
+          <h2 class="popup__title js-popup-title"></h2>
       </div>
-    </template>
+    </div>
     <template class="js-card-template">
       <li class="js-gallery-item card">
         <button class="button card__del js-del-btn"></button>
