fix: remove unused class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pages/index.css">
     <title>Around The U.S.</title>
   </head>
-  <body class="page js-page">
+  <body class="page">
     <header class="header">
       <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
@@ -50,7 +50,7 @@
             name="name"
             placeholder="Name"
           >
-          <input
+          <inputinputinputinputinputinputinput
             type="text"
             class="form__input js-input-job"
             name="job"
@@ -87,7 +87,7 @@
     <div class="popup popup_background_dark js-popup-picture">
       <div class="popup__container popup__container_type_picture">
         <button
-          class="popup__btn-close popup__btn-close_position button js-close-btn"
+          class="popup__btn-close button js-close-btn"
           type="button">
       </button>
         <img class="popup__image js-popup-image">
