fix: remove unused class frommain

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <img src="images/logo.svg" alt="logo" class="header__logo">
     </header>
-    <main class="content">
+    <main>
       <section class="profile page__section">
         <div class="media">
           <img
@@ -50,7 +50,7 @@
             name="name"
             placeholder="Name"
           >
-          <inputinputinputinputinputinputinput
+          <input
             type="text"
             class="form__input js-input-job"
             name="job"
