--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
       <li class="js-gallery-item card">
         <button class="button card__del js-del-btn"></button>
         <div class="card__img js-card-img"></div>
-        <h2 class="card__title js-card-title"></h2>
-        <button class="card__like js-like-btn button"></button>
+        <div class="card__description-wrapper">
+          <h2 class="card__title js-card-title"></h2>
+          <button class="card__like js-like-btn button"></button>
+        </div>
       </li>
     </template>
     <script src="scripts/script.js"></script>
