--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
           >
           <div class="media__body">
             <div class="media__item">
-              <h1 class="media__name js-user-name">Jacques Cousteau</h1>
+              <h1 class="media__name">Jacques Cousteau</h1>
               <button
-                class="media__btn button js-edit-btn"
+                class="media__btn button"
                 type="button"
               ></button>
             </div>
-            <p class="media__job js-user-job">Explorer</p>
+            <p class="media__job">Explorer</p>
           </div>
         </div>
-        <button class="profile__btn button js-add-btn" type="button"></button>
+        <button class="profile__btn button" type="button"></button>
       </section>
-      <ul class="gallery page__section js-gallery"></ul>
+      <ul class="gallery page__section"></ul>
     </main>
     <footer class="footer page__section">
       <p class="footer__copyright">&#169; 2020 Around The U.S.</p>
@@ -39,10 +39,10 @@
     <div class="popup popup_background_light js-popup-profile">
       <div class="popup__container popup__container_type_form">
         <button
-          class="popup__btn-close button js-close-btn"
+          class="popup__btn-close button"
           type="button">
         </button>
-        <form class="form js-form" action="#">
+        <form class="form" action="#">
           <h2 class="form__title">Edit profile</h2>
           <input
             type="text"
@@ -63,10 +63,10 @@
     <div class="popup popup_background_light js-popup-photo-form">
       <div class="popup__container popup__container_type_form">
         <button
-          class="popup__btn-close button js-close-btn"
+          class="popup__btn-close button"
           type="button">
         </button>
-        <form class="form js-form" action="#">
+        <form class="form" action="#">
           <h2 class="form__title">New Place</h2>
           <input
             type="text"
@@ -87,20 +87,20 @@
     <div class="popup popup_background_dark js-popup-picture">
       <div class="popup__container popup__container_type_picture">
         <button
-          class="popup__btn-close button js-close-btn"
+          class="popup__btn-close button"
           type="button">
       </button>
-        <img class="popup__image js-popup-image">
-        <h2 class="popup__title js-popup-title"></h2>
+        <img class="popup__image">
+        <h2 class="popup__title"></h2>
       </div>
     </div>
     <template class="js-card-template">
-      <li class="js-gallery-item card">
-        <button class="button card__del js-del-btn"></button>
-        <div class="card__img js-card-img"></div>
+      <li class="card">
+        <button class="button card__del"></button>
+        <div class="card__img"></div>
         <div class="card__description-wrapper">
-          <h2 class="card__title js-card-title"></h2>
-          <button class="card__like js-like-btn button"></button>
+          <h2 class="card__title"></h2>
+          <button class="card__like button"></button>
         </div>
       </li>
     </template>
