style: apply yandex style guide styles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
     <title>Around The U.S.</title>
@@ -21,10 +21,7 @@
           <div class="media__body">
             <div class="media__item">
               <h1 class="media__name">Jacques Cousteau</h1>
-              <button
-                class="media__btn button"
-                type="button"
-              ></button>
+              <button class="media__btn button" type="button"></button>
             </div>
             <p class="media__job">Explorer</p>
           </div>
@@ -38,10 +35,7 @@
     </footer>
     <div class="popup popup_background_light js-popup-profile">
       <div class="popup__container popup__container_type_form">
-        <button
-          class="popup__btn-close button"
-          type="button">
-        </button>
+        <button class="popup__btn-close button" type="button"></button>
         <form class="form" action="#">
           <h2 class="form__title">Edit profile</h2>
           <input
@@ -62,10 +56,7 @@
     </div>
     <div class="popup popup_background_light js-popup-photo-form">
       <div class="popup__container popup__container_type_form">
-        <button
-          class="popup__btn-close button"
-          type="button">
-        </button>
+        <button class="popup__btn-close button" type="button"></button>
         <form class="form" action="#">
           <h2 class="form__title">New Place</h2>
           <input
@@ -86,10 +77,7 @@
     </div>
     <div class="popup popup_background_dark js-popup-picture">
       <div class="popup__container popup__container_type_picture">
-        <button
-          class="popup__btn-close button"
-          type="button">
-      </button>
+        <button class="popup__btn-close button" type="button"></button>
         <img class="popup__image">
         <h2 class="popup__title"></h2>
       </div>
